# cmd/server/main.go
@@ -53,14 +53,15 @@ func main() {
 	{
 		v1.POST("/customer/login", customerHandler.Login)
 		v1.POST("/admin/login", adminHandler.Login)
-
+		v1.POST("/temp_register", customerHandler.TempRegister)
+		v1.POST("/check_token", customerHandler.CheckToken)
+		
 		customer := v1.Group("/customer", middleware.Customer)
 		{
 			customer.GET("/me", customerHandler.GetMe)
 			customer.GET("/posts", customerHandler.GetPosts)
 			customer.GET("/instagram", customerHandler.FetchInstagramPosts)
 			customer.POST("/sync", customerHandler.Sync)
-			customer.POST("/temp_register", customerHandler.TempRegister)
 			customer.POST("/register", customerHandler.Register)
 		}
 		admin := v1.Group("/admin", middleware.Admin)
